@@ -380,9 +380,8 @@ END
     return unless actually_compile_code || actually_run_tests
     name = output_name.downcase
     log.info "Compiling"
-    puts `cd #{output_directory}`
-    puts `gcc -fPIC -o #{name}.o -c #{name}.c`
-    puts `gcc -shared -fPIC -o #{FFI.map_library_name(name)} #{name}.o`
+    puts `gcc -fPIC -o #{File.join(output_directory, name)}.o -c #{File.join(output_directory, name)}.c`
+    puts `gcc -shared -fPIC -o #{File.join(output_directory, FFI.map_library_name(name))} #{File.join(output_directory, name)}.o`
   end
   
   def run_tests
